crates/squealy/tests/compile_fail/min_max_reject_boolean_columns.stderr
error[E0277]: the trait bound `bool: AggregateScalar` is not satisfied
  --> tests/compile_fail/min_max_reject_boolean_columns.rs:16:39
   |
16 |         .select(|(flag,)| flag.active.min());
   |                                       ^^^ the trait `AggregateScalar` is not implemented for `bool`
   |
   = help: the following other types implement trait `AggregateScalar`:
             Option<T>
             f32
             f64
             i128
             i16
             i32
             i64
             i8
           and $N others
note: required by a bound in `ColumnRef::<'scope, K>::min`
  --> src/expr.rs
   |
   |     pub fn min(self) -> Expr<'scope, MinExpr<K>, AggregateExprAst<ColumnExprAst<K>>>
   |            --- required by a bound in this associated function
   |     where
   |         K::Value: AggregateScalar,
   |                   ^^^^^^^^^^^^^^^ required by this bound in `ColumnRef::<'scope, K>::min`

error[E0277]: the trait bound `Expr<'_, MinExpr<FlagActive>, squealy::AggregateExprAst<squealy::ColumnExprAst<FlagActive>>>: squealy::ReturningProjection<'_>` is not satisfied
  --> tests/compile_fail/min_max_reject_boolean_columns.rs:16:10
   |
16 |         .select(|(flag,)| flag.active.min());
   |          ^^^^^^ unsatisfied trait bound
   |
   = help: the trait `squealy::ReturningProjection<'_>` is not implemented for `Expr<'_, MinExpr<FlagActive>, squealy::AggregateExprAst<squealy::ColumnExprAst<FlagActive>>>`
help: the trait `squealy::ReturningProjection<'_>` is implemented for `Expr<'_, K, Ast>`
  --> src/query.rs
   |
   | / impl<'scope, K, Ast> ReturningProjection<'scope> for Expr<'scope, K, Ast>
   | | where
   | |     K: ExprKind + ProjectionShape,
   | |     Ast: crate::ExprAst,
   | |________________________^
note: required by a bound in `squealy::SourceQuery::select`
  --> src/query.rs
   |
   |     fn select<P>(
   |        ------ required by a bound in this associated function
...
   |         P: ReturningProjection<'scope> + Projectable + crate::ProjectionClass,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `SourceQuery::select`
